$Id: History,v 1.24 2002-12-11 16:05:16 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/HepRep sub-category
---------------------------------------------------------------------------

11th December 2002  John Allison  (vis-V04-01-10)
- Fixed default view parameters (global culling false).

9th December 2002 Mark Donszelmann
- Fixed bug that files were left open. Will close now, apart from stdin/stderr
- Fixed color call not to use array creation.
- Fixed HepRep standard (reader related), G4 is a writer.
- Fixed include file now to only include HepRep.h (which includes all others)

3rd December 2002 Mark Donszelmann
- Fixed bug that XML Output can be routed to stdout or stderr.

27th November 2002 Mark Donszelmann
- Fixed core dump (Solaris) if open HepRepXML and closed it w/o writing anything

27th November 2002  John Allison  (vis-V04-01-08)
- Changed mickname of HepRep to HepRepXML.
- Fixed description of HepRepFile.

26th November 2002 Mark Donszelmann
- Fixed FillStyle, LineStyle, LineWidth, HasFrame and Symbol Names
- Fixed parent-child relationship  for calorimeter hits
- Fixed material state number, now a string
- Fixed fillColor to be equal to color
