@@ -1,4 +1,4 @@
-$Id: History,v 1.213 2003-01-20 14:12:32 johna Exp $
+$Id: History,v 1.214 2003-01-24 21:18:39 perl Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+24th January 2003  Joseph Perl
+- Fixes to HepRep - see History file.
 
 20th January 2003  John Allison  (vis-V05-00-00, co-works intercoms-V05-00-00)
 - Incorporated openinventor-V05-00-00: Removed erroneous additional
